<resources>
    <string name="app_name">Skin Care Manager</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="add">+</string>
    <string name="button">Button</string>
    <string name="step">Step</string>
    <string name="start_over">Start Over</string>
    <string name="background_image">Background Image</string>
    <string-array name="steps">
        <item>Select Step Type</item>
        <item>Oil Cleanser</item>
        <item>Water Based Cleanser</item>
        <item>Exfoliator</item>
        <item>Toner</item>
        <item>Essence</item>
        <item>Treatments</item>
        <item>Sheet Masks</item>
        <item>Eye Cream</item>
        <item>Moisturizer</item>
        <item>Sun Screen</item>
    </string-array>
    <string-array name="routines">
        <item>Basic Routine</item>

    </string-array>
</resources>
